--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -31,7 +31,7 @@ header {
     color: #252422;
   }
 }
-.hero {
+.main-hero {
   overflow-x: clip;
   position: relative;
   padding: 50px 0;
@@ -56,9 +56,10 @@ header {
       }
       p{
         font-weight: 100;
-        width: clamp(200px, 400px, 500px);
         text-align: justify;
         text-justify: auto;
+        min-width: 260px;
+        max-width: 500px;
       }
       .links {
         a {
@@ -132,9 +133,11 @@ header {
 
 @media screen and (max-width: 61.938em){
 
-    .hero {
-      padding: 10px 0;
-      
+    .main-hero {
+      padding: 120px 0 200px 0;
+      h1{
+        font-size: 24px ;
+      }
       .box1 {
         top: -200px;
       }
