--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,66 +33,67 @@ header .nav-link {
   color: #252422;
 }
 
-.hero {
+.main-hero {
   overflow-x: clip;
   position: relative;
   padding: 50px 0;
 }
-.hero .container {
+.main-hero .container {
   position: relative;
 }
-.hero .container article {
+.main-hero .container article {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   width: -moz-fit-content;
   width: fit-content;
 }
-.hero .container article h1 {
+.main-hero .container article h1 {
   font-family: var(--primary-font-family);
   text-transform: uppercase;
   font-size: 45px;
 }
-.hero .container article h2 {
+.main-hero .container article h2 {
   font-family: var(--secondary-font-family);
   text-transform: capitalize;
   font-size: 24px;
   text-transform: uppercase;
   font-weight: 600;
 }
-.hero .container article p {
+.main-hero .container article p {
   font-weight: 100;
-  width: 400px;
   text-align: justify;
   text-justify: auto;
+  min-width: 260px;
+  max-width: 500px;
 }
-.hero .container article .links a {
+.main-hero .container article .links a {
   color: black;
 }
-.hero .container figure img {
+.main-hero .container figure img {
   border-radius: 20px;
   box-shadow: 10px -10px black;
   height: 500px;
 }
-.hero .container .links {
+.main-hero .container .links {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 5px;
 }
-.hero .box1 {
+.main-hero .box1 {
   transform: rotate(45deg);
   top: -120px;
   right: -150px;
 }
-.hero .box2 {
+.main-hero .box2 {
   bottom: -20px;
   left: -150px;
   transform: rotate(-45deg);
 }
-.hero .box1,
-.hero .box2 {
+.main-hero .box1,
+.main-hero .box2 {
   border: 5px solid black;
   background-color: transparent;
   border-radius: 20px;
@@ -123,16 +124,19 @@ header .nav-link {
 }
 
 @media screen and (max-width: 61.938em) {
-  .hero {
-    padding: 10px 0;
+  .main-hero {
+    padding: 120px 0 200px 0;
   }
-  .hero .box1 {
+  .main-hero h1 {
+    font-size: 24px;
+  }
+  .main-hero .box1 {
     top: -200px;
   }
-  .hero .box2 {
+  .main-hero .box2 {
     left: -270px;
   }
-  .hero .text-center {
+  .main-hero .text-center {
     color: #252422 !important;
   }
   .about figure {
