update for about
center profile image

--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -34,13 +34,12 @@ header {
 .main-hero {
   overflow-x: clip;
   position: relative;
-  padding: 50px 0;
+  padding: 100px 0 100px 0;
   .container {
     position: relative;
     article {
       margin-left: auto;
       margin-right: auto;
-      text-align: center;
       width: fit-content;
       h1 {
         font-family: var(--primary-font-family);
@@ -76,11 +75,10 @@ header {
      
     }
     .links{
+        gap: 5px;
         display: flex;
         flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        gap: 5px;
+        flex-wrap: nowrap;
     }
   }
   .box1 {
@@ -108,8 +106,11 @@ header {
 
 }
 .about{
-    padding:80px 0;
+  background-color: #252422;
+  color: white;
+  position: relative;
     .hero{
+      padding: 200px 0 200px 0;
       h1{
         font-family: var(--primary-font-family);
         font-size: 45px;
@@ -118,15 +119,23 @@ header {
         margin-bottom: 5%;
       }
       p{
-        color: #5a5a5a;
+        font-weight: 100;
       }
       figure{
+        position: absolute;
+        top: -120px;
+        left: 50%;
+        transform: translate(-50%);
         img{
-          
-          height: 500px;
-          border-radius: 10px;
-          box-shadow: 10px 10px black;
+          height: 350px;
+          border-radius: 50%;
+          box-shadow: 0 0 150px red;
         }
+
+      }
+      .container{
+        margin-top: 10%;
+        
       }
     }
 }
@@ -134,7 +143,7 @@ header {
 @media screen and (max-width: 61.938em){
 
     .main-hero {
-      padding: 120px 0 200px 0;
+      padding: 100px 0 250px 0;
       h1{
         font-size: 24px ;
       }
@@ -147,14 +156,13 @@ header {
       .text-center{
         color: #252422 !important;
       }
+
     }
     .about{
       figure {
         padding-top: 50px;
-        display: flex;
-        justify-content: center;
         img {
-          height: 350px !important;
+          height: 300px !important;
         }
       }
     }
