--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -31,62 +31,60 @@ header {
     color: #252422;
   }
 }
+article{
+  max-width: 800px;
+  margin: auto;
+  text-wrap: pretty;
+}
 .main-hero {
   overflow-x: clip;
   position: relative;
   padding: 100px 0 100px 0;
   .container {
     position: relative;
-    article {
-      margin-left: auto;
-      margin-right: auto;
-      width: fit-content;
-      h1 {
-        font-family: var(--primary-font-family);
-        text-transform:uppercase;
-        font-size: 45px;
-      }
-      h2 {
-        font-family: var(--secondary-font-family);
-        text-transform:capitalize;
-        font-size: clamp(18px, 24px, 32px);
-        text-transform: uppercase;
-        font-weight: 600;
-      }
-      p{
-        font-weight: 100;
-        text-align: justify;
-        text-justify: auto;
-        min-width: 260px;
-        max-width: 700px;
-      }
-      .links {
-        a {
-          color: black;
-        }
-      }
-    }
-    figure {
-      img {
-        border-radius: 20px;
-        box-shadow:10px -10px black;
-        height: 500px;
-      }
-     
-    }
-    .links{
-        gap: 5px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
+  }
+  h1 {
+    font-family: var(--primary-font-family);
+    text-transform:uppercase;
+    font-size: 45px;
+  }
+  h2 {
+    font-family: var(--secondary-font-family);
+    text-transform:capitalize;
+    font-size: clamp(18px, 24px, 32px);
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+  p{
+    font-weight: 100;
+    min-width: 260px;
+    max-width: 700px;
+  }
+  .links {
+    a {
+      color: black;
     }
   }
-  .box1 {
+  figure {
+    img {
+      border-radius: 20px;
+      box-shadow:10px -10px black;
+      height: 500px;
+    }
+   
+  }
+  .links{
+      gap: 5px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+  }
+  .box1 { //box design
     transform: rotate(45deg);
     top: -120px;
     right: -150px;
   }
-  .box2 {
+  .box2 { //box design
     bottom: -20px;
     left: -150px;
     transform: rotate(-45deg);
@@ -105,37 +103,47 @@ header {
   }
 
 }
-.about{
+.about{ //About us section
   background-color: #252422;
   color: white;
   position: relative;
     .hero{
-      padding: 200px 0 200px 0;
-      h1{
-        font-family: var(--primary-font-family);
-        font-size: 45px;
-        text-transform: uppercase;
-        text-align: center;
-        margin-bottom: 5%;
+      padding: 100px 0 100px 0;
+    }
+    .container{
+      width: fit-content;
+    }
+    h1{
+      font-family: var(--primary-font-family);
+      font-size: 45px;
+      text-transform:capitalize;
+      margin-bottom: 20px;
+    }
+    p{
+      font-weight: 100;
+    }
+    figure{
+      position: absolute;
+      top: -100px;
+      left: 50%;
+      transform: translate(-50%);
+      img{
+        height: 350px;
+        border-radius: 50%;
+        box-shadow: 0 0 150px red;
       }
-      p{
-        font-weight: 100;
-      }
-      figure{
-        position: absolute;
-        top: -120px;
-        left: 50%;
-        transform: translate(-50%);
-        img{
-          height: 350px;
-          border-radius: 50%;
-          box-shadow: 0 0 150px red;
-        }
 
-      }
-      .container{
-        margin-top: 10%;
-        
+    }
+    .icons{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 20px;
+      svg{
+        height: 50px;
+        width: 40px;
       }
     }
 }
@@ -145,10 +153,14 @@ header {
     .main-hero {
       padding: 100px 0 250px 0;
       h1{
-        font-size: 24px ;
+        font-size: 24px;
+      }
+      h2{
+        font-size: 18px;
       }
       .box1 {
         top: -200px;
+        right: -200px;
       }
       .box2{
         left: -270px;
