--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,6 +33,12 @@ header .nav-link {
   color: #252422;
 }
 
+article {
+  max-width: 800px;
+  margin: auto;
+  text-wrap: pretty;
+}
+
 .main-hero {
   overflow-x: clip;
   position: relative;
@@ -41,40 +47,32 @@ header .nav-link {
 .main-hero .container {
   position: relative;
 }
-.main-hero .container article {
-  margin-left: auto;
-  margin-right: auto;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-.main-hero .container article h1 {
+.main-hero h1 {
   font-family: var(--primary-font-family);
   text-transform: uppercase;
   font-size: 45px;
 }
-.main-hero .container article h2 {
+.main-hero h2 {
   font-family: var(--secondary-font-family);
   text-transform: capitalize;
   font-size: 24px;
   text-transform: uppercase;
   font-weight: 600;
 }
-.main-hero .container article p {
+.main-hero p {
   font-weight: 100;
-  text-align: justify;
-  text-justify: auto;
   min-width: 260px;
   max-width: 700px;
 }
-.main-hero .container article .links a {
+.main-hero .links a {
   color: black;
 }
-.main-hero .container figure img {
+.main-hero figure img {
   border-radius: 20px;
   box-shadow: 10px -10px black;
   height: 500px;
 }
-.main-hero .container .links {
+.main-hero .links {
   gap: 5px;
   display: flex;
   flex-direction: row;
@@ -108,31 +106,43 @@ header .nav-link {
   position: relative;
 }
 .about .hero {
-  padding: 200px 0 200px 0;
+  padding: 100px 0 100px 0;
 }
-.about .hero h1 {
+.about .container {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.about h1 {
   font-family: var(--primary-font-family);
   font-size: 45px;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 5%;
+  text-transform: capitalize;
+  margin-bottom: 20px;
 }
-.about .hero p {
+.about p {
   font-weight: 100;
 }
-.about .hero figure {
+.about figure {
   position: absolute;
-  top: -120px;
+  top: -100px;
   left: 50%;
   transform: translate(-50%);
 }
-.about .hero figure img {
+.about figure img {
   height: 350px;
   border-radius: 50%;
   box-shadow: 0 0 150px red;
 }
-.about .hero .container {
-  margin-top: 10%;
+.about .icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
+.about .icons svg {
+  height: 50px;
+  width: 40px;
 }
 
 @media screen and (max-width: 61.938em) {
@@ -142,8 +152,12 @@ header .nav-link {
   .main-hero h1 {
     font-size: 24px;
   }
+  .main-hero h2 {
+    font-size: 18px;
+  }
   .main-hero .box1 {
     top: -200px;
+    right: -200px;
   }
   .main-hero .box2 {
     left: -270px;
