--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -39,7 +39,7 @@ article{
 .main-hero {
   overflow-x: clip;
   position: relative;
-  padding: 100px 0 100px 0;
+  padding: 200px 0 200px 0;
   .container {
     position: relative;
   }
@@ -83,22 +83,23 @@ article{
     transform: rotate(45deg);
     top: -120px;
     right: -150px;
+    background-color: transparent;
   }
   .box2 { //box design
     bottom: -20px;
     left: -150px;
     transform: rotate(-45deg);
+    z-index: 2;
+    background-color: #252422;
   }
   .box1,
   .box2 {
-    border: 5px solid black;
-    background-color: transparent;
     border-radius: 20px;
     height: 300px;
     width: 300px;
     transition: 720ms;
     position: absolute;
-    box-shadow: 10px 10px red;
+    box-shadow: 10px 10px 30px red;
     
   }
 
