--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,15 +5,15 @@
 }
 
 :root {
-  --primary-font-family:"Archivo Black", sans-serif;
-  --secondary-fony-family:"Archivo", sans-serif;
-  --primary-font-size:45px;
+  --primary-font-family: "Archivo Black", sans-serif;
+  --secondary-fony-family: "Archivo", sans-serif;
+  --primary-font-size: 45px;
 }
 
 body {
   font-family: var(--secondary-fony-family);
   line-height: 1.5;
-  background-color: #F5FFFA;
+  background-color: #f5fffa;
   scroll-behavior: smooth;
   scroll-padding-top: 10px;
   font-size: 16px;
@@ -30,19 +30,32 @@ header .nav-link {
   font-size: 16px;
   text-transform: uppercase;
   text-shadow: 1px 0px rgb(207, 207, 207);
+  color: #a1a1a1;
+}
+header .nav-link:active {
   color: #252422;
 }
 
 article {
-  max-width: 800px;
+  max-width: 1000px;
   margin: auto;
   text-wrap: pretty;
+}
+article h1 {
+  font-family: var(--primary-font-family);
+  font-size: 45px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+article p {
+  font-weight: 100;
 }
 
 .main-hero {
   overflow-x: clip;
   position: relative;
   padding: 200px 0 200px 0;
+  top: 0;
 }
 .main-hero .container {
   position: relative;
@@ -64,35 +77,29 @@ article {
   min-width: 260px;
   max-width: 700px;
 }
-.main-hero .links a {
-  color: black;
-}
-.main-hero figure img {
-  border-radius: 20px;
-  box-shadow: 10px -10px black;
-  height: 500px;
-}
 .main-hero .links {
   gap: 5px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
 }
+.main-hero a {
+  color: black;
+}
 .main-hero .box1 {
   transform: rotate(45deg);
   top: -120px;
   right: -150px;
-  background-color: transparent;
 }
 .main-hero .box2 {
   bottom: -20px;
   left: -150px;
   transform: rotate(-45deg);
   z-index: 2;
-  background-color: #252422;
 }
 .main-hero .box1,
 .main-hero .box2 {
+  background-color: #252422;
   border-radius: 20px;
   height: 300px;
   width: 300px;
@@ -107,20 +114,9 @@ article {
   position: relative;
 }
 .about .hero {
-  padding: 100px 0 100px 0;
-}
-.about .container {
+  padding: 200px 0 200px 0;
   width: -moz-fit-content;
   width: fit-content;
-}
-.about h1 {
-  font-family: var(--primary-font-family);
-  font-size: 45px;
-  text-transform: capitalize;
-  margin-bottom: 20px;
-}
-.about p {
-  font-weight: 100;
 }
 .about figure {
   position: absolute;
@@ -139,13 +135,120 @@ article {
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 50px;
+  max-width: 500px;
+  margin: auto;
 }
 .about .icons svg {
   height: 50px;
   width: 40px;
 }
 
+.project {
+  padding: 200px 0 200px 0;
+}
+.project .row {
+  margin-top: 50px;
+  box-shadow: 0 0 30px #d8d8d8;
+  border-radius: 20px;
+  padding: 0;
+}
+.project .col {
+  overflow: hidden;
+  padding: 30px;
+}
+.project .col article h1 {
+  font-size: 24px !important;
+  margin-bottom: 5px;
+}
+.project .col article h2 {
+  font-family: var(--secondary-font-family);
+  font-weight: 200;
+  font-size: clamp(0.875rem, 0.8723rem + 4.2553vw, 1rem);
+}
+.project .col article a {
+  color: white;
+  background-color: #252422;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: 720ms;
+}
+.project .col article a:hover {
+  background-color: #f5fffa;
+  outline: 1px solid black;
+  color: #252422;
+  transition: 720ms;
+}
+.project .col article a:active {
+  scale: 0.9;
+}
+.project .col img {
+  border-radius: 10px;
+  max-width: 450px;
+  margin: auto;
+}
+
+.contact {
+  background-color: #252422;
+  padding: 200px 0 200px 0;
+  color: white;
+  text-align: center;
+}
+.contact .links {
+  gap: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.contact a {
+  color: white;
+}
+.contact svg {
+  height: 40px;
+  width: 40px;
+}
+.contact h1 {
+  font-size: clamp(1rem, 6vw, 2rem);
+}
+
+.scrollTop {
+  display: none;
+  background-color: red;
+  width: -moz-fit-content;
+  width: fit-content;
+  position: fixed;
+  z-index: 10;
+  padding: 10px;
+  border-radius: 5px;
+  bottom: 20px;
+  right: 20px;
+}
+.scrollTop a {
+  color: white;
+}
+
+.scrollTop:active {
+  scale: 1.2;
+}
+
+.scrollWatcher {
+  width: 100%;
+  height: 5px;
+  position: fixed;
+  bottom: 0;
+  background-color: red;
+  scale: 0 1;
+  animation: scroll-watcher linear;
+  animation-timeline: scroll();
+  transform-origin: left;
+}
+
+@keyframes scroll-watcher {
+  to {
+    scale: 1 1;
+  }
+}
 @media screen and (max-width: 61.938em) {
   .main-hero {
     padding: 100px 0 250px 0;
@@ -171,6 +274,12 @@ article {
   }
   .about figure img {
     height: 250px !important;
+  }
+  .project h1 {
+    font-size: 24px;
+  }
+  .project img {
+    width: 300px;
   }
 }
 @media (min-width: 992px) and (max-width: 1400px) {
