--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -180,7 +180,7 @@ article {
     }
       img{
         border-radius: 10px;
-        max-width: 450px;
+        width: 100%;
         margin: auto;
       }
     
