--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -217,8 +217,8 @@ article {
   z-index: 10;
   padding: 10px;
   border-radius: 5px;
-  bottom: 20px;
-  right: 20px;
+  bottom: 50px;
+  right: 50px;
   a{
     color: white;
   }
@@ -287,3 +287,18 @@ article {
   }
 }
 
+
+article > *{
+  opacity: 0;
+  scale: .8;
+  animation: fadeIn linear forwards;
+  animation-timeline: view();
+  animation-range: entry;
+  
+}
+@keyframes fadeIn {
+  to{
+    scale: 1;
+    opacity: 1;
+  }
+}
