--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -104,6 +104,26 @@ article {
     position: absolute;
     box-shadow: 10px 10px 30px red;
   }
+  .custom-shape-divider-bottom-1705003094 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1705003094 svg {
+    position: relative;
+    display: block;
+    width: calc(113% + 1.3px);
+    height: 200px;
+}
+
+.custom-shape-divider-bottom-1705003094 .shape-fill {
+    fill: #252422;
+}
 }// ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 .about{
   //About us section
@@ -142,6 +162,7 @@ article {
 }// ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 .project {
   padding: 200px 0 200px 0;
+  position: relative;
   .row{
     margin-top: 50px;
     box-shadow: 0 0 30px #d8d8d8;
@@ -185,6 +206,45 @@ article {
       }
     
   }
+  .custom-shape-divider-top-1705002414 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1705002414 svg {
+    position: relative;
+    display: block;
+    width: calc(150% + 1.3px);
+    height: 200px;
+}
+
+.custom-shape-divider-top-1705002414 .shape-fill {
+    fill: #252422;
+}
+.custom-shape-divider-bottom-1705002626 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1705002626 svg {
+  position: relative;
+  display: block;
+  width: calc(150% + 1.3px);
+  height: 238px;
+}
+
+.custom-shape-divider-bottom-1705002626 .shape-fill {
+  fill: #252424;
+}
 } // ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 .contact{
   background-color: #252422;
